[package]
name = "npl_utils"
version = "0.2.0"
edition = "2021"
authors = [ "René Ladan <rene0+github@freedom.nl>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rene0/npl_utils"
description = "NPL receiver for embedded platforms."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radio_datetime_utils = "0.4.0"
